fix home-hero overlap images-cleanup code

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -9218,7 +9218,6 @@ header.style-3 .main-menu > ul li.menu-item-has-children > i {
 @media (min-width: 1400px) and (max-width: 1599px) {
   .home3-banner-section .bottom-img3 {
     bottom: -14%;
-    max-width: 325px;
   }
 }
 @media (max-width: 1399px) {
